Few fixes in mCustomScrollbar integration

--- a/Azimuth/Content/Settings.css
+++ b/Azimuth/Content/Settings.css
@@ -16,6 +16,23 @@
     margin-left: 80px; 
     width: 63%;
     height: 90%;
+    overflow: hidden;
+}
+
+.tabbable {
+    height: calc(100% - 82px);
+}
+
+.tab-content {
+    height: calc(100% - 42px);
+}
+
+#Vkontakte {
+    height: 100%;
+}
+
+#vk-track-list {
+    height: 70%;
 }
 
 .stuck {
